# InfinityAgent

./: docker-compose.yml  sample.excalidraw
mcp-client/: README.md  pyproject.toml
mcp-client/api/: .env.example  client.py  main.py  mcp_client.py
mcp-client/api/utils/: logger.py
mcp-server/: main.py
tg_bot/: .env.prod  .gitignore  README.md  backend_client.py  config.py  database.py  main.py  pyproject.toml
